--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "datatables.net-bs4": "*",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "laravel-mix": "^4.1.2",
+        "lodash": "^4.17.14",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.22.4",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "highcharts": "^7.1.1"
+        "datatables.net": "^1.10.19",
+        "datatables.net-dt": "^1.10.19",
+        "highcharts": "^7.1.2"
     }
 }
